--- a/Event Management HTML Project/starter/event.html
+++ b/Event Management HTML Project/starter/event.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Events</title>
+        <link rel="icon" href="img\date.png">
+    </head>
 
+    <body bgcolor="black" style="color: white;">
+        <center>
+            <h1>
+                Upcoming Events📅
+            </h1>
+            <p>
+                Don't Miss any of your important events. Here are the important events you have registered for !
+            </p>
+        </center>
+        <hr>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt nemo illum adipisci recusandae non, assumenda voluptatem rerum architecto, aliquid eveniet eos dolorem, eius impedit debitis error natus velit maiores dignissimos perferendis quidem. Dolor incidunt non repellat fugiat fugit, iste, soluta reiciendis, fuga beatae necessitatibus recusandae nobis. Necessitatibus ea ducimus vero?</p>
+        <center>
+            <img src ="img\event1.png">
+            <h2>Photo Gallery Event</h2>
+            <h3>Free Entry | Free Food | Pets are Not Allowed</h3>
+            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+        </center>
+
+        <center>
+            <img src="img\event2.png">
+            <br>
+            <h2>
+                <a href="https://www.myntra.com/">Fashion Store</a>
+            </h2>
+            <h2>Free Entry | Free Food | Pets are Not Allowed</h2>
+            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+        </center>
+        <hr>
+        <center>
+            <h2>Contact</h2>
+            <h3>+91 787483783743 | eventcollab@gmail.com</h3>
+            <p>9th street Avenue Park, Trichy, 625620</p>
+        </center>
+    </body>
+</html>
